# motosh-fw

./: .gitignore  README.md  cross_file.txt.example  meson.build  meson_options.txt  sim.sh  stm32l0xx8.ld
include/: config.h.in
sim/: STM32L051x.svd  base.py  base.repl  customfw.repl  customfw.resc  motosh.repl  motosh.resc
sim/fw/: sensorhub.elf
src/: main.c
tools/: parseSVD.py
